--- a/membership-form-v4.html
+++ b/membership-form-v4.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 v3 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper v2 v4 py-5 m-auto">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-10">
@@ -71,14 +71,14 @@
                 <div class="col-md-4 step-form-sidebar">
                   <div class="step-list-sidebar">
 
-                    <div class="step-list active" data-step="1">
+                    <div class="step-list completed" data-step="1">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
                       <p class="step-title">Your Email</p>
                     </div>
 
-                    <div class="step-list" data-step="2">
+                    <div class="step-list active" data-step="2">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
