--- a/membership-v3.html
+++ b/membership-v3.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="node_modules/intl-tel-input/build/css/intlTelInput.min.css">
 
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/style.css?v=1.0.4">
+  <link rel="stylesheet" href="assets/css/style.css?v=1.0.2">
 </head>
 
 <body>
@@ -53,15 +53,190 @@
             <h2 class="section-title pb-4 text-uppercase text-center"><span>Membership</span></h2>
             <div class="row justify-content-center">
               <div class="col-md-8">
-                <p class="text-medium font-600 text-center">The Islamic Center of Greater Cincinnati (ICGC) is supported by membership dues and financial donations made by the community. If you are not already a member of our Center consider joining us today.</p>
+                <p class="text-medium font-600 text-center">The Islamic Center of Greater Cincinnati (ICGC) is supported
+                  by membership dues and financial donations made by the community. If you are not already a member of
+                  our Center consider joining us today.</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- text contents -->
+      <div class="container membership-details pt-5">
+        <div class="row">
+          <!-- membership benefits -->
+          <div class="col-md-6">
+            <div class="card card-accordion active">
+              <div class="card-header d-flex justify-content-between">
+                <h5 class="font-600 mb-0">Membership Benefits</h5>
+                <span class="card-accordion-icon">
+                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
+                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
+                </span>
+
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-600">Membership has many benefits, including:</h5>
+
+                <div class="icon-list-group pt-3">
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Islamic Weekend School tuition at a
+                    discounted rate.</p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Rental of the Mirror Hall at a
+                    discounted rate.</p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Rental of the Gym Hall or multipurpose
+                    recreational building at a discounted rate. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Priority registration in sports
+                    activities. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Priority purchase of Eid parking
+                    passes. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Periodic mailing of newsletters and
+                    event flyers. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> General Body meeting. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Voting rights to elect Executive
+                    Committee members. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- membership rules -->
+          <div class="col-md-6">
+            <div class="card card-accordion active">
+              <div class="card-header d-flex justify-content-between">
+                <h5 class="font-600 mb-0">Membership Rules</h5>
+
+                <span class="card-accordion-icon">
+                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
+                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
+                </span>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-600">Following are the membership rules:</h5>
+
+                <div class="icon-list-group pt-3">
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Any Muslim, 18 years or older, can
+                    become a member by applying for membership and paying annual dues. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> This membership is valid for one year
+                    from the date of application approval. Membership must be renewed every year. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Membership dues must be paid in
+                    advance for a year’s membership or be on automatic payment plan. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Voting rights are available to all
+                    members who have completed their paid membership for one year. Members elect part of the Center’s
+                    executive board. </p>
+                  <p class="icon-list"><img src="assets/images/check-circle.png"> Membership is open only to legal
+                    residents of USA (only permanent residents and US Citizens can vote). </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <!-- membership fees -->
+          <div class="col-md-6">
+            <div class="card card-accordion active">
+              <div class="card-header d-flex justify-content-between">
+                <h5 class="font-600 mb-0">Membership Fees</h5>
+
+                <span class="card-accordion-icon">
+                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
+                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
+                </span>
+              </div>
+              <div class="card-body">
+                <div class="icon-list-group pt-3">
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      <strong class="d-block">Platinum $600.00</strong>
+                      Full Payment or Automatic Deduction ($50/month)
+                    </span>
+                  </p>
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      <strong class="d-block">Gold $360.00</strong>
+                      Full Payment or Automatic Deduction ($30/month)
+                    </span>
+                  </p>
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      <strong class="d-block">Silver $240.00 </strong>
+                      Full Payment or  Automatic Deduction ($20/month)
+                    </span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- membership payment method -->
+          <div class="col-md-6">
+            <div class="card card-accordion active">
+              <div class="card-header d-flex justify-content-between">
+                <h5 class="font-600 mb-0">Payment Method</h5>
+
+                <span class="card-accordion-icon">
+                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
+                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
+                </span>
+              </div>
+              <div class="card-body">
+
+                <h5 class="card-title font-600">Membership fee may be paid all at one time or in monthly installments.
+                  ICGC accepts checks, credit cards, and automatic deductions. Note the following:</h5>
+
+                <div class="icon-list-group pt-3">
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      If writing a check, make it payable to <strong>Islamic Educational Council</strong>.
+                    </span>
+                  </p>
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      If using automatic withdrawal, submit a void check to the <strong>ICGC</strong> to authorize payment.
+                    </span>
+                  </p>
+
+                  <p class="icon-list">
+                    <img src="assets/images/rec.png" alt="list">
+                    <span>
+                      <strong class="d-block">Silver $240.00 </strong>
+                      Full Payment or  Automatic Deduction ($20/month)
+                    </span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- apply now button -->
+        <div class="py-5 btn-apply-wrapper text-center">
+          <div class="row justify-content-center">
+            <div class="col-md-3">
+              <button type="button" class="btn btn-danger btn-apply-js btn-xl w-100 text-uppercase">
+                <span class="me-2">Become a Member</span>
+                <span class="btn-icon btn-icon-right-arrow">
+                <img src="assets/images/next.png" alt="apply">
+              </span>
+              </button>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 v5 w-75 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper d-none v2 v5 w-75 py-5 m-auto">
 
       <div class="container">
         <div class="row justify-content-center">
@@ -560,7 +735,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- footer -->
@@ -571,7 +745,8 @@
           <p class="text-center text-md-start m-0">© ICGC. All Rights Reserved, 2022 </p>
         </div>
         <div class="col-md-12 col-lg-6">
-          <p class="m-0 text-center text-md-end text-lg-end pb-md-2 pb-lg-0"><a href="htttps://masjidsolutions.net" target="_blank"> masjidsolutions.net</a>
+          <p class="m-0 text-center text-md-end text-lg-end pb-md-2 pb-lg-0"><a href="htttps://masjidsolutions.net"
+                                                                                target="_blank"> masjidsolutions.net</a>
             (317) 854 0207 </p>
         </div>
       </div>
@@ -596,145 +771,29 @@
     </div>
   </div>
 
-  <!-- modal -->
-
-  <!-- code of conduct modal -->
-  <div class="modal" tabindex="-1" id="modal-waiver" data-bs-backdrop="static" data-bs-keybord="false">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title font-bold">Code of Conduct</h5>
-          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
-            <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="py-2 px-sm-3 px-md-4">
-            <p>ICGC Youth is a community-based organization providing youth based programs for the
-              muslim community in cincinnati. Participation in the organization’s programs is subject
-              to the observance of the organization’s rules and procedures. The activities outlined
-              below are strictly prohibited. Any participant who violates this Code is subject to
-              discipline, up to and including removal from the program.</p>
-
-            <ul>
-              <li>Youth participants must refrain from engaging in any type of violence,
-                bullying, harassment, or abusive behavior towards adults and peers.</li>
-              <li>Youth participants must refrain from the possession or use of alcoholic
-                beverages, illegal drugs, explosives, firearms, weapons or other similar items on
-                ICGC’s property.</li>
-              <li>Youth participants must respect, adhere to the rules of, and follow the
-                instructions given to them by a counselor, facilitator or leader. (Group facilitator,
-                counselor, youth coordinators, volunteer, etc.).</li>
-              <li>Youth participants must show kindness and respect to the people around
-                them (their peers, community elders, group leaders, counselors, etc.) and
-                their surrounding environment (masjid property, classroom, field trip
-                facilities, etc.)</li>
-            </ul>
-            <h4 class="font-600">Action Steps</h4>
-            <ol>
-              <li>1st Strike: Report to Youth Coordinator - Parents are notified of infraction.</li>
-              <li>2nd Strike: Parent and participant meeting with staff & Youth Coordinator</li>
-              <li>3rd Strike: Suspension from program</li>
-              <li>Reinstatement Process: Parent & participant meeting with staff and Youth Coordinator.</li>
-            </ol>
-
-            <p class="font-600">
-              I have read and I understand the ICGC Youth Code of Conduct. I agree to abide by the
-              rules described above and understand that I may be removed as a participant if I violate
-              any of these rules.
-            </p>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary btn-lg" data-bs-dismiss="modal">I Agree</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- terms & conditions modal -->
-  <div class="modal" tabindex="-1" id="modal-terms" data-bs-backdrop="static" data-bs-keybord="false">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title font-bold">Terms & Conditions</h5>
-          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
-            <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="py-2 px-sm-3 px-md-4">
-            <p>ICGC Youth is a community-based organization providing youth based programs for the
-              muslim community in cincinnati. Participation in the organization’s programs is subject
-              to the observance of the organization’s rules and procedures. The activities outlined
-              below are strictly prohibited. Any participant who violates this Code is subject to
-              discipline, up to and including removal from the program.</p>
-
-            <ul>
-              <li>Youth participants must refrain from engaging in any type of violence,
-                bullying, harassment, or abusive behavior towards adults and peers.</li>
-              <li>Youth participants must refrain from the possession or use of alcoholic
-                beverages, illegal drugs, explosives, firearms, weapons or other similar items on
-                ICGC’s property.</li>
-              <li>Youth participants must respect, adhere to the rules of, and follow the
-                instructions given to them by a counselor, facilitator or leader. (Group facilitator,
-                counselor, youth coordinators, volunteer, etc.).</li>
-              <li>Youth participants must show kindness and respect to the people around
-                them (their peers, community elders, group leaders, counselors, etc.) and
-                their surrounding environment (masjid property, classroom, field trip
-                facilities, etc.)</li>
-            </ul>
-            <h4 class="font-600">Action Steps</h4>
-            <ol>
-              <li>1st Strike: Report to Youth Coordinator - Parents are notified of infraction.</li>
-              <li>2nd Strike: Parent and participant meeting with staff & Youth Coordinator</li>
-              <li>3rd Strike: Suspension from program</li>
-              <li>Reinstatement Process: Parent & participant meeting with staff and Youth Coordinator.</li>
-            </ol>
-
-            <p class="font-600">
-              I have read and I understand the ICGC Youth Code of Conduct. I agree to abide by the
-              rules described above and understand that I may be removed as a participant if I violate
-              any of these rules.
-            </p>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary btn-lg" data-bs-dismiss="modal">I Agree</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </div>
 
 <!-- jquery -->
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <!-- datepicker -->
 <script src="node_modules/jquery-ui-datepicker-with-i18n/ui/jquery.ui.datepicker.js"></script>
-<!-- bootstrap -->
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- intl-tel-phone -->
-<script src="node_modules/intl-tel-input/build/js/intlTelInput.min.js"></script>
 <!-- card validation -->
 <script src="assets/js/card_validation.js"></script>
-<!-- intl-tel-phone initialization -->
-<script src="assets/js/phone_validator.js"></script>
 
 <!-- script.js -->
-<script src="assets/js/script.js?v=1.0.4"></script>
+<script src="assets/js/script.js?v=1.0.2"></script>
 
 <script>
-  function sendOtp(){
+  function sendOtp() {
     return true;
   }
 
-  function otpVerification(){
+  function otpVerification() {
     return true;
   }
 
-  function submitTheForm(){
-    window.location.href="thank-you.html";
+  function submitTheForm() {
+    window.location.href = "thank-you.html";
   }
 </script>
 </body>
