--- a/membership-form-v4.html
+++ b/membership-form-v4.html
@@ -187,38 +187,43 @@
                             </div>
 
                             <div class="col-md-4">
-                              <div class="form-group required-group">
+                              <div class="form-group">
                                 <label for="middle-name">Middle Name</label>
                                 <input type="text" class="form-control" id="middle-name" name="MiddleName">
                               </div>
                             </div>
 
                             <div class="col-md-4">
-                              <div class="form-group required-group">
+                              <div class="form-group">
                                 <label for="last-name">Last Name</label>
                                 <input type="text" class="form-control" id="last-name" name="LastName">
                               </div>
                             </div>
 
                             <div class="col-md-6">
-                              <div class="form-group required-group phone-number-validator-wrapper">
-                                <label for="phone-number-personal">Phone Number (Personal) <span class="required-mark text-danger">*</span></label>
-                                <input type="number" class="form-control phone-number-validator" id="phone-number-personal" name="PhoneNumberPersonal_">
+                              <div class="form-group phone-number-validator-wrapper">
+                                <label for="phone-number-personal">Phone Number (Personal) <span
+                                  class="required-mark text-danger">*</span></label>
+                                <input type="number" class="form-control phone-number-validator"
+                                       id="phone-number-personal" name="PhoneNumberPersonal_">
                                 <input type="hidden" class="phone-number-hidden" name="PhoneNumberPersonal">
                               </div>
                             </div>
 
                             <div class="col-md-6">
-                              <div class="form-group required-group phone-number-validator-wrapper">
-                                <label for="phone-number-home">Phone Number (Home) <span class="required-mark text-danger">*</span></label>
-                                <input type="number" class="form-control phone-number-validator appearance-none" id="phone-number-home" name="PhoneNumberHome_">
+                              <div class="form-group phone-number-validator-wrapper">
+                                <label for="phone-number-home">Phone Number (Home) <span
+                                  class="required-mark text-danger">*</span></label>
+                                <input type="number" class="form-control phone-number-validator appearance-none"
+                                       id="phone-number-home" name="PhoneNumberHome_">
                                 <input type="hidden" class="phone-number-hidden" name="PhoneNumberHome">
                               </div>
                             </div>
 
                             <div class="col-md-6">
-                              <div class="form-group required-group">
-                                <label for="marital-status">Marital Status <span class="required-mark text-danger">*</span> </label>
+                              <div class="form-group">
+                                <label for="marital-status">Marital Status <span
+                                  class="required-mark text-danger">*</span> </label>
                                 <select class="form-select form-control" id="marital-status" name="MaritalStatus">
                                   <option value="">Select an Option</option>
                                   <option value="1">Single</option>
@@ -238,9 +243,11 @@
                             <div class="col-md-6">
                               <div class="select-with-other-wrapper">
 
-                                <div class="form-group required-group">
-                                  <label for="Person_ResidentialStatus">Residential Status <span class="required-mark text-danger">*</span></label>
-                                  <select class="form-select form-control" id="Person_ResidentialStatus" name="Person.ResidentialStatus">
+                                <div class="form-group">
+                                  <label for="Person_ResidentialStatus">Residential Status <span
+                                    class="required-mark text-danger">*</span></label>
+                                  <select class="form-select form-control" id="Person_ResidentialStatus"
+                                          name="Person.ResidentialStatus">
                                     <option value="">--SELECT--</option>
                                     <option value="US Citizen">US Citizen</option>
                                     <option value="Permanent Resident">Permanent Resident</option>
@@ -248,7 +255,7 @@
                                   </select>
                                 </div>
 
-                                <div class="form-group required-group other-wrapper d-none pt-1">
+                                <div class="form-group other-wrapper d-none pt-1">
                                   <input type="text" class="form-control" name="OtherResidentailStaus">
                                 </div>
 
