--- a/membership-form-v5.html
+++ b/membership-form-v5.html
@@ -61,12 +61,13 @@
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 v5 w-75 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper v2 v5 py-5 m-auto">
 
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-10">
             <div class="step-form-main">
+
               <div class="row step-form-main-row">
                 <!-- sidebar -->
                 <div class="col-md-4 step-form-sidebar">
@@ -199,14 +200,14 @@
                             </div>
 
                             <div class="col-md-4">
-                              <div class="form-group required-group">
+                              <div class="form-group">
                                 <label for="middle-name">Middle Name</label>
                                 <input type="text" class="form-control" id="middle-name" name="MiddleName">
                               </div>
                             </div>
 
                             <div class="col-md-4">
-                              <div class="form-group required-group">
+                              <div class="form-group">
                                 <label for="last-name">Last Name</label>
                                 <input type="text" class="form-control" id="last-name" name="LastName">
                               </div>
@@ -233,7 +234,7 @@
                             </div>
 
                             <div class="col-md-6">
-                              <div class="form-group required-group">
+                              <div class="form-group">
                                 <label for="marital-status">Marital Status <span
                                   class="required-mark text-danger">*</span> </label>
                                 <select class="form-select form-control" id="marital-status" name="MaritalStatus">
@@ -255,7 +256,7 @@
                             <div class="col-md-6">
                               <div class="select-with-other-wrapper">
 
-                                <div class="form-group required-group">
+                                <div class="form-group">
                                   <label for="Person_ResidentialStatus">Residential Status <span
                                     class="required-mark text-danger">*</span></label>
                                   <select class="form-select form-control" id="Person_ResidentialStatus"
@@ -267,7 +268,7 @@
                                   </select>
                                 </div>
 
-                                <div class="form-group required-group other-wrapper d-none pt-1">
+                                <div class="form-group other-wrapper d-none pt-1">
                                   <input type="text" class="form-control" name="OtherResidentailStaus">
                                 </div>
 
