div layout changed for content and apply button

--- a/membership-v1.html
+++ b/membership-v1.html
@@ -203,18 +203,20 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
 
-        <!-- apply now button -->
-        <div class="py-5 btn-apply-wrapper text-center">
-          <div class="row justify-content-center">
-            <div class="col-md-3">
-              <button type="button" class="btn btn-danger btn-apply-js btn-xl w-100 text-uppercase">
-                <span class="me-2">Become a Member</span>
-                <span class="btn-icon btn-icon-right-arrow">
+    <div class="container">
+      <!-- apply now button -->
+      <div class="py-5 btn-apply-wrapper text-center">
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <button type="button" class="btn btn-danger btn-apply-js btn-xl w-100 text-uppercase">
+              <span class="me-2">Become a Member</span>
+              <span class="btn-icon btn-icon-right-arrow">
                 <img src="assets/images/next.png" alt="apply">
               </span>
-              </button>
-            </div>
+            </button>
           </div>
         </div>
       </div>
