index.htm changed to membership-form-v5.html in thankyou header

--- a/thank-you.html
+++ b/thank-you.html
@@ -32,7 +32,7 @@
   <header class="header">
     <div class="container">
       <div class="d-flex flex-wrap justify-content-center align-items-center py-2">
-        <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto">
+        <a href="membership-form-v5.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto">
           <img src="assets/images/logo_icgc.png" class="logo-image img-fluid" alt="ICGC">
         </a>
 
