membership v1 page updated

--- a/success.html
+++ b/success.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/style.css?v=1.0.5">
+  <link rel="stylesheet" href="assets/css/style.css?v=1.0.6">
 </head>
 
 <body>
@@ -279,10 +279,10 @@
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <!-- datepicker -->
 <!--<script src="node_modules/@chenfengyuan/datepicker/dist/datepicker.min.js"></script>-->
-<!-- bootstrap datepicker -->
-<script src="node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 <!-- bootstrap -->
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- bootstrap datepicker -->
+<script src="node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 <!-- intl-tel-phone -->
 <script src="node_modules/intl-tel-input/build/js/intlTelInput.min.js"></script>
 <!-- card validation -->
@@ -291,7 +291,7 @@
 <script src="assets/js/phone_validator.js"></script>
 
 <!-- script.js -->
-<script src="assets/js/script.js?v=1.0.5"></script>
+<script src="assets/js/script.js?v=1.0.6"></script>
 
 <script>
   function sendOtp(){
@@ -303,7 +303,7 @@
   }
 
   function submitTheForm(){
-    window.location.href="thank-you.html";
+    window.location.href="success.html";
   }
 </script>
 </body>
