membership v1 page updated

--- a/membership-v1.html
+++ b/membership-v1.html
@@ -227,7 +227,7 @@
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 v5 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper d-none v2 v5 py-5 m-auto">
 
       <div class="container">
         <div class="row justify-content-center">
