success page design

--- a/failure.html
+++ b/failure.html
@@ -60,7 +60,7 @@
 
             <div class="thank-message-text">
               <h3 class="thank-text text-danger text-center m-0">Something Went Wrong!</h3>
-              <h3 class="text-center font-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quam!</h3>
+              <h3 class="text-center font-600">Somethings went wrong, please try again!</h3>
             </div>
 
             <div class="extra-info pt-4 pb-4">
