--- a/success.html
+++ b/success.html
@@ -60,7 +60,7 @@
 
             <div class="thank-message-text">
               <h3 class="thank-text text-center m-0">Thank You</h3>
-              <h3 class="text-center font-600">Your registration for GOLD Membership is complete.</h3>
+              <h3 class="text-center font-600">Your registration for GOLD Membership has been completed.</h3>
             </div>
 
             <div class="extra-info pt-4 pb-4">
@@ -103,7 +103,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- footer -->
